--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,15 @@
+GITHUB_ID=
+GITHUB_SECRET=
+AUTH_SECRET=
+JWT_SECRET=
+# NEXTAUTH_URL: The canonical URL of your site, refer to https://next-auth.js.org/configuration/opt
+NEXTAUTH_URL=
 # APP ID
 NEXT_PUBLIC_APP_ID=
 # APP API key
 NEXT_PUBLIC_APP_KEY=
 # API url prefix
 NEXT_PUBLIC_API_URL=
+# Next Auth
+NEXTAUTH_USERNAME=
+NEXTAUTH_PASSWORD=
